# warlock

./: .gitignore  CODE_OF_ETHICS.md  CONTRIBUTING.md  GAP-ANALYSIS.md  LICENSE  README.md  SPRINTS.md  pyproject.toml  ruff.toml
.claude/agents/: ink-tui-engineer.md  warlock-agent-engineer.md  warlock-fullstack-engineer.md
deploy/did-web/: README.md  _headers
docs/: A0-fluke-track-audit.md  A2-hardware-spec.md  HARDWARE.md  OVERVIEW.md  SOFTWARE.md  feature-loot-tab.md  feature-reports-v2.md
scripts/: gps_watchdog.py  install.sh  warlock  warlock-launch
scripts/desktop/: warlock-tui.desktop  warlock-web.desktop
src/: App.tsx
src/pages/: Ops.tsx  WifiRecon.tsx
src/warlock/: __init__.py  __main__.py  auth.py  config.py  db.py  engagement.py  events.py  gpsd_client.py  jobs.py  models.py  registry.py  server.py  tracks.py
src/warlock/aar/: __init__.py  builder.py  did.py  grant.py  keystore.py  preimage.py  producer.py  signer.py  store.py
src/warlock/api/: aar.py  engagements.py  health.py  ws.py
src/warlock/modules/: _base.py  audio.py  capture.py  crack.py  dashboard.py  esp32_companion.py  gps.py  loot.py  maps.py  mesh.py  net_recon.py  netdiag.py  nettools.py  ops.py  report.py  reports.py  retention.py  sdr.py  sdr_offensive.py  server_audit.py  system.py  voip.py  wifi_analyzer.py  wifi_offensive.py  wifi_recon.py  wireless_ids.py
src/warlock/tui/: app.py
systemd/: warlock.service
tests/: test_aar.py  test_audio.py  test_auth.py  test_capture.py  test_crack.py  test_dashboard.py  test_did_publication.py  test_eaphammer.py  test_engagement.py  test_engagement_expiry.py  test_esp32_companion.py  test_gps.py  test_loot.py  test_mesh.py  test_net_recon.py  test_netdiag.py  test_nettools.py  test_ops.py  test_ops_events.py  test_report.py  test_reports.py  test_retention.py  test_sdr.py  test_sdr_offensive.py  test_server_audit.py  test_smoke.py  test_system.py  test_voip.py  test_wifi_analyzer.py  test_wifi_offensive.py  test_wifi_recon.py  test_wireless_ids.py
tui-ink/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tui-ink/scripts/: ondevice-verify.tsx
tui-ink/src/: app.tsx  chat.tsx  cli.tsx  context.tsx
tui-ink/src/__tests__/: api.test.ts  dashboard.test.tsx
tui-ink/src/chat/: ChatApp.test.tsx  ChatApp.tsx
tui-ink/src/components/: Banner.tsx  BigValue.tsx  BrailleSpinner.tsx  HudBar.tsx  (+11 more)
warlock/modules/: sdr.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
(+115 files in other folders)
