[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "warlock"
version = "0.1.0"
description = "Warlock Command Center — unified TUI + web for the uConsole field kit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "TechMages", email = "warlock@techmages.org" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "websockets>=13.0",
    "httpx>=0.27",
    "textual>=2.0",
    "rich>=13.9",
    "psutil>=6.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "meshtastic>=2.5",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3"]

[project.scripts]
warlock-server = "warlock.__main__:main"
warlock-tui = "warlock.tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/warlock"]

[tool.hatch.metadata]
allow-direct-references = true
